--- a/FamilySys/Views/Admin/Members.cshtml
+++ b/FamilySys/Views/Admin/Members.cshtml
@@ -1,4 +1,5 @@
 ﻿@using FamilySys.Models.DbModels
+@using Microsoft.AspNetCore.Server.Kestrel.Core.Internal.Http
 @model IQueryable<FamilySys.Models.DbModels.User>
 @{
 	ViewData["Title"] = "管理员";
@@ -6,7 +7,7 @@
 }
 
 <h2>家庭成员</h2>
-
+@Html.Raw(TempData["Success"])
 <table class="table">
 	<tr>
 		<th style="text-align: center">ID</th>
@@ -14,15 +15,24 @@
 		<th style="text-align: center">性别</th>
 		<th style="text-align: center">电话</th>
 		<th style="text-align: center">邮箱</th>
+		<th style="text-align: center">积分</th>
+		<th style="text-align: center">管理信息</th>
 	</tr>
 	@foreach (var each in Model) {
-		<tr>
-			<td style="text-align: center">@each.ID</td>
-			<td style="text-align: center">@each.Username</td>
-			<td style="text-align: center">@each.Sex</td>
-			<td style="text-align: center">@each.Phone</td>
-			<td style="text-align: center">@each.Mail</td>
-		</tr>
+	<tr>
+		<td style="text-align: center">@each.ID</td>
+		<td style="text-align: center">@each.Username</td>
+		<td style="text-align: center">@each.Sex</td>
+		<td style="text-align: center">@each.Phone</td>
+		<td style="text-align: center">@each.Mail</td>
+		<td style="text-align: center">@each.Score</td>
+		<td style="text-align: center">
+			@using (Html.BeginForm("EditMemberInfo", "Admin", HttpMethod.Post)) {
+				<input type="hidden" value=@each.ID name="ID" />
+				<input type="submit" name="SubBtn" value="编辑信息" class="btn btn-sm btn-primary" />
+			}
+		</td>
+	</tr>
 	}
 </table>
 
