--- a/FamilySys/Views/Home/Members.cshtml
+++ b/FamilySys/Views/Home/Members.cshtml
@@ -14,6 +14,7 @@
 		<th style="text-align: center">性别</th>
 		<th style="text-align: center">电话</th>
 		<th style="text-align: center">邮箱</th>
+		<th style="text-align: center">积分</th>
 	</tr>
 	@foreach (var each in Model)
 	{
@@ -23,6 +24,7 @@
 		<td style="text-align: center">@each.Sex</td>
 		<td style="text-align: center">@each.Phone</td>
 		<td style="text-align: center">@each.Mail</td>
+		<td style="text-align: center">@each.Score</td>
 	</tr>
 	}
 </table>
