--- a/FamilySys/Views/Member/Members.cshtml
+++ b/FamilySys/Views/Member/Members.cshtml
@@ -14,16 +14,18 @@
 		<th style="text-align: center">性别</th>
 		<th style="text-align: center">电话</th>
 		<th style="text-align: center">邮箱</th>
+		<th style="text-align: center">积分</th>
 	</tr>
 	@foreach (var each in Model)
 	{
-		<tr>
-			<td style="text-align: center">@each.ID</td>
-			<td style="text-align: center">@each.Username</td>
-			<td style="text-align: center">@each.Sex</td>
-			<td style="text-align: center">@each.Phone</td>
-			<td style="text-align: center">@each.Mail</td>
-		</tr>
+	<tr>
+		<td style="text-align: center">@each.ID</td>
+		<td style="text-align: center">@each.Username</td>
+		<td style="text-align: center">@each.Sex</td>
+		<td style="text-align: center">@each.Phone</td>
+		<td style="text-align: center">@each.Mail</td>
+		<td style="text-align: center">@each.Score</td>
+	</tr>
 	}
 </table>
 
