--- a/FamilySys/Views/Shared/_AdminLayout.cshtml
+++ b/FamilySys/Views/Shared/_AdminLayout.cshtml
@@ -117,7 +117,7 @@
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
 					<li><a asp-area="" asp-controller="Admin" asp-action="Index">主页</a></li>
-					<li><a asp-area="" asp-controller="Admin" asp-action="Members">家庭成员</a></li>
+					<li><a asp-area="" asp-controller="Admin" asp-action="Members">家庭成员信息管理</a></li>
 				</ul>
 				<ul class="nav navbar-right navbar-nav" style="background-color: azure">
 					<li>
