--- a/FamilySys/Views/Shared/_AdminLayout.cshtml
+++ b/FamilySys/Views/Shared/_AdminLayout.cshtml
@@ -44,6 +44,18 @@
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
 					<li><a asp-area="" asp-controller="Admin" asp-action="Index">主页</a></li>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+							公告
+							<b class="caret"></b>
+						</a>
+						<ul class="dropdown-menu nav" style="background-color: #333;">
+							<li>
+								<a style="color: #9d9d9d" asp-controller="Admin" asp-action="PublishAnnouncement">发布公告</a>
+								<a style="color: #9d9d9d" asp-controller="Admin" asp-action="ShowAnnouncements">查看公告</a>
+							</li>
+						</ul>
+					</li>
 					<li><a asp-area="" asp-controller="Admin" asp-action="Members">家庭成员信息管理</a></li>
 				</ul>
 				<ul class="nav navbar-right navbar-nav" style="background-color: azure">
@@ -117,7 +129,19 @@
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
 					<li><a asp-area="" asp-controller="Admin" asp-action="Index">主页</a></li>
-					<li><a asp-area="" asp-controller="Admin" asp-action="Members">家庭成员信息管理</a></li>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+							公告
+							<b class="caret"></b>
+						</a>
+						<ul class="dropdown-menu nav" style="background-color: #333;">
+							<li>
+								<a style="color: #9d9d9d" asp-controller="Admin" asp-action="PublishAnnouncement">发布公告</a>
+								<a style="color: #9d9d9d" asp-controller="Admin" asp-action="ShowAnnouncements">查看公告</a>
+							</li>
+						</ul>
+					</li>
+					<li><a asp-area="" asp-controller="Admin" asp-action="Members">家庭成员信息管理</a></li>			
 				</ul>
 				<ul class="nav navbar-right navbar-nav" style="background-color: azure">
 					<li>
